# django-mcp-server

./: .gitignore  LICENCE.md  README.md  pyproject.toml  test_mcp_fix.py
examples/mcpexample/: manage.py  pytest.ini
examples/mcpexample/bird_counter/: admin.py  apps.py  mcp.py  models.py  serializers.py  tests.py  views.py
examples/mcpexample/bird_counter/migrations/: 0001_initial.py  0002_location_bird_location.py  0003_city_location_city.py
examples/mcpexample/mcpexample/: asgi.py  settings.py  urls.py  wsgi.py
mcp_server/: __init__.py  agg_pipeline_ql.py  apps.py  content_negotiation.py  djangomcp.py  http_handler.py  jsonql.py  sse_handler.py  urls.py  views.py
mcp_server/management/commands/: stdio_server.py
test/: test_mcp_client.py  test_mcp_server.py
test/test_agent/: .env  agent.py
test/test_agent_25/: agent.py
